<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PracticaAndroid</string>
    //Activity_bienvenida
    <string name="activity_bienvenida_texto_btn_allistado">Al listado de facturas</string>
    <string name="activity_bienvenida_texto_btn_asmartsolar">A Smart Solar</string>
    <string name="activity_bienvenida_texto_retrofit">Retrofit</string>
    <string name="activity_bienvenida_texto_retromock">Retromock</string>
    //activity_listadofacturas
    <string name="activity_listadofacturas_toolbar_back_icon_description">Back icon</string>
    <string name="activity_listadofacturas_toolbar_texto_izquierda_consumo">Consumo</string>
    <string name="activity_listadofacturas_toolbar_filter_icon_description">Filter icon</string>
    <string name="activity_listadofacturas_toolbar_titulo_facturas_text">Facturas</string>
    //activity_smartsolar
    <string name="activity_smartsolar_toolbar_texto_izquierda_text">Atras</string>
    <string name="activity_smartsolar_toolbar_title_smartsolar_text">Smart Solar</string>
    <string name="activity_smartsolar_tablayout_mi_instalacion_text">Mi instalacion</string>
    <string name="activity_smartsolar_tablayout_energia_text">Energia</string>
    <string name="activity_smartsolar_tablayout_detalles_text">Detalles</string>
    //factura_detail_rv
    <string name="facturadetail_rv_default_date_text">31 Ago 2020</string>
    <string name="facturadetail_rv_pendienteDePago_text">Pendiente de pago</string>
    <string name="facturadetail_rv_default_precio">54,56</string>
    <string name="facturadetail_rv_default_moneda">€</string>
    <string name="facturadetail_rv_icono_detalles_description">Icono detalles</string>
    //Popup_info_autoconsumo
    <string name="popup_info_autoconsumo_titulo_text" tools:ignore="ExtraTranslation">Estado solicitud autoconsumo</string>
    <string name="popup_info_autoconsumo_cuerpoinfo_text" tools:ignore="ExtraTranslation">El tiempo estimado de activacion de tu autoconsumo es de 1 a 2 meses, éste variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="popup_info_autoconsumo_btn_description" tools:ignore="ExtraTranslation">Boton aceptar</string>
    //Toolbar_personalizado
    <string name="toolbar_personalizado_icono_izquierda_description">Icono izquierda</string>
    <string name="toolbar_personalizado_texto_izquierda_text">Texto izquierda</string>
    <string name="toolbar_personalizado_icono_derecha_description">Icono derecha</string>
    <string name="toolbar_personalizado_titulo_text">Titulo</string>
    //Activity filtros
    <string name="activity_filtros_tv_titulo_text">Filtrar Facturas</string>
    <string name="activity_filtros_tv_fecha_desde_text">Desde: </string>
    <string name="activity_filtros_default_fecha">dia/mes/año</string>
    <string name="activity_filtros_tv_fecha_hasta_text">Hasta:</string>
    <string name="activity_filtros_tv_por_un_importe_text">Por un importe</string>
    <string name="activity_filtros_default_importe">100</string>
    <string name="activity_filtros_tv_por_estado_text">Por estado</string>
    <string name="activity_filtros_tv_pagadas_text">Pagada</string>
    <string name="activity_filtros_tv_anuladas_text">Anulada</string>
    <string name="activity_filtros_tv_cuota_fija_text">Cuota Fija</string>
    <string name="activity_filtros_tv_pendientes_de_pago_text">Pendiente de pago</string>
    <string name="activity_filtros_tv_plan_de_pago_text">Plan de pago</string>
    <string name="activity_filtros_btn_aplicar_text">Aplicar</string>
    <string name="activity_filtros_btn_eliminar_filtros_text">Eliminar Filtros</string>
    <string name="activity_filtros_tv_con_fecha_de_emision_text" tools:ignore="Typos">Con fecha de emision</string>
    //fragment_energia
    <string name="fragment_energia_image_contentDescription">Trabajando</string>
    <string name="fragment_energia_mensajeInformativo">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu produccion solar.Sentimos las molestias</string>
    //fragment_miinstalacion
    <string name="fragment_instalacion_texto_informativo">Aqui tienes los datos de tu instalacion fotovoltaica en tiempo real.</string>
    <string name="fragment_instalacion_descripcion_imagen">Grafico datos de tu instalacion</string>
    <string name="popup_info_autoconsumo_btn_text">Aceptar</string>
    <string name="fragment_detalles_masinfo_description">más informacion</string>
    //popup_funcionalidad_no_disponible
    <string name="popup_funcionalidad_no_disponible_titulo" tools:ignore="ExtraTranslation">Informacion</string>
    <string name="popup_funcionalidad_no_disponible_mensaje" tools:ignore="ExtraTranslation">Esta funcionalidad aún no está disponible</string>
    //others
    <string name="title_activity_smartsolar">smartsolar_activity</string>
    <string name="filtro_vacio_text">No hay ninguna factura que se encuentre bajo esas condiciones</string>
    //fragment_detalles
    <string name="fragment_detalles_titulo_texto_cau">CAU (Código Autoconsumo)</string>
    <string name="fragment_detalles_titulo_texto_estado">Estado solicitud alta autoconsumidor</string>
    <string name="fragment_detalles_titulo_texto_tipo">Tipo autoconsumo</string>
    <string name="fragment_detalles_titulo_texto_compensacion">Compensacion de excedentes</string>
    <string name="fragment_detalles_titulo_texto_potencia">Potencia de instalacion</string>
    <string name="fragment_detalles_default_texto_cau">ES002100...</string>
    <string name="fragment_detalles_default_texto_estado">No hemos recibido ninguna...</string>
    <string name="fragment_detalles_default_texto_tipo">Con excedentes y...</string>
    <string name="fragment_detalles_default_texto_compsensacion">Precio PVPC</string>
    <string name="fragment_detalles_default_texto_potencia">5kWp</string>

</resources>