<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.smartsolar.detallesFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_titulo_texto_cau"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_cau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_default_texto_cau" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="9"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_detalles_titulo_texto_estado"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/tv_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_detalles_default_texto_estado" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_mas_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_info_details_foreground"
            app:tint="@android:color/holo_blue_light"
            android:contentDescription="@string/fragment_detalles_masinfo_description" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_titulo_texto_tipo"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_default_texto_tipo" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_titulo_texto_compensacion"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_compensacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_default_texto_compsensacion"
            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_detalles_titulo_texto_potencia"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/tv_potencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/fragment_detalles_default_texto_potencia" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey" />

</LinearLayout>