<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_info_autoconsumo_titulo_text"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_info_autoconsumo_cuerpoinfo_text"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"
            />

        <Button
            android:id="@+id/btn_cerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/popup_info_autoconsumo_btn_description"
            android:src="@drawable/close_icon"
            android:backgroundTint="@color/greenDefaultApp"
            android:text="@string/popup_info_autoconsumo_btn_text"
            android:layout_marginVertical="10dp"/>

</LinearLayout>